syntax = "proto3";
option go_package=".;proto";// 转换成的go文件的包名
service Greeter{
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;  // 1 是编号不是值
}

message HelloReply{
  string message =1;
}